remove unused code related to normal and major service